css/style.css
/*-----------------------------------------------------------------------------------

 Theme Name: Nextme
 Theme URI: http://
 Description: The Multi-Purpose Onepage Template
 Author: dethemes
 Author URI: http://themeforest.net/user/dejithemes
 Version: 1.0

 Main Color   : #1A237E , #2576FD
 main Font    : Poppins, Roboto

-----------------------------------------------------------------------------------*/
/* --------------------------------------------------------------------------------

 == Table Of Content

	01 Basics
	02 Buttons
	03 Navbar
	04 Card
	05 Showcase
	06 Features
	07 Services
	08 Portfolio
	09 Team
	10 Feedback
	11 Blog
	12 Contact
  13 Footer
  14 Loader


---------------------------------------------------------------- */


/* ----------------------------------------------------------------
     [ 01 Start Basics ]
-----------------------------------------------------------------*/

body{
  font-size:15px;
}

h1,h2,h3,h4,h5,h6{
  font-family:Poppins;
}

p{
  font-family:Roboto;
}

a:hover {
  color: #ffffff;
  text-decoration: underline;
}

.text-center {
    text-align: center!important;
}

.bottom-space {
  margin-bottom: 1rem;
}

.justify-content-center {
    justify-content: center !important;
}

.hover-effect {
  position: relative;
  overflow: hidden;
}

.hover-effect:hover::after, .hover-effect:hover::before {
  height: 100%;
  opacity: 0;
  width: 100%;
}

.hover-effect::before, .hover-effect::after {
  content: "";
  background: #fff;
  height: 0;
  width: 0;
  z-index: 1;
  position: absolute;
  -webkit-transition-duration: 1.6s;
  -o-transition-duration: 1.3s;
  transition-duration: 1.3s;
}

.hover-effect::before, .hover-effect::after {
  content: "";
  background: #fff;
  height: 0;
  width: 0;
  z-index: 1;
  position: absolute;
  -webkit-transition-duration: 1.3s;
  -o-transition-duration: 1.3s;
  transition-duration: 1.3s;
}

.hover-effect::before {
  right: 0;
  opacity: 1;
  top: 0;
}

ol, ul {
	list-style: none;
}

ul {
  padding: 0;
  list-style-type: none;
}

blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


/* ----------------------------------------------------------------
     [ 01 End Basics ]
-----------------------------------------------------------------*/


/* ----------------------------------------------------------------
     [ 02 Start Buttons ]
-----------------------------------------------------------------*/
.button-style {
  background-color: #56a1c4;
  border: none;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-size: 0.8rem;;
  line-height: 1em;
  outline: none;
  padding: 0.8rem 2.5rem 0.7rem;
  position: relative;
  text-transform: uppercase;
  font-weight: 400;
  text-decoration: none !important;
}

.showcase-btn {
  margin: 1.3rem;
}

.button-style:before,
.button-style:after {
  border-color: transparent;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
  border-style: solid;
  border-width: 0;
  content: "";
  height: 1.8rem;
  position: absolute;
  width: 1.8rem;
}

.button-style:before {
  border-color: hsl(20, 16%, 96%);
  border-left-width: 2px;
  border-top-width: 2px;
  left: -5px;
  top: -5px;
}

.button-style:after {
  border-bottom-width: 2px;
  border-color: #c47135;
  border-right-width: 2px;
  bottom: -5px;
  right: -5px;
}

.button-style:hover,
.button-style.hover {
  background-color: #c47135;
  color: #ffffff;
}

.button-style:hover:before,
.button-style.hover:before,
.button-style:hover:after,
.button-style.hover:after {
  height: 100%;
  width: 100%;
}

/* ----------------------------------------------------------------
     [ End Buttons ]
-----------------------------------------------------------------*/

/* ----------------------------------------------------------------
     [ 03 Start Navbar ]
-----------------------------------------------------------------*/

nav a {
  color: #ffffff;
  font-size: .8rem;
  text-transform: uppercase;
  margin-right: 1rem;
}

.navbar-default{
  border:0;
  font-family:Poppins;
}

.navbar-brand{
  font-size:1rem;
  color:#000 !important;
  font-weight:bold;
}

.navbar-default {
    background-color: transparent;
    border-color: #e7e7e7;
    padding: 0.6rem;
}

.navbar-default .navbar-nav>li>a {
  font-size: 0.7rem;
  font-weight: 500;
  color: #eee;
  letter-spacing: .5px;
  margin-left: .9px;
  -webkit-transition: all .5s;
  transition: all .5s;
}

.navbar-default .navbar-nav>li>a:hover {
  color: #ffffff;
}

.navbar-default .navbar-nav>li>a:active {
  color: #0dd;
}

a.navbar-brand {
    color: #fff !important;
}

.navbar-default{
  border:0;
  font-family:Poppins;
}

.navbar-brand{
  font-size:20px;
  color:#000 !important;
  font-weight:bold;
}

.navbar-default {
    background-color: transparent;
    border-color: #e7e7e7;
    padding: .7px;
}

.navbar-default .navbar-nav>li>a {
  font-size: 13px;
  font-weight: 500;
  color: #eee;
  letter-spacing: .5px;
  margin-left: 14px;
  -webkit-transition: all .5s;
  transition: all .5s;
}

.navbar-default .navbar-nav>li>a:hover {
  color: #ffffff;
}

.navbar-default .navbar-nav>li>a:active {
  color: #0dd;
}

.activate-menu {
  background-image: linear-gradient(-140deg, #2c7dbc 15%, #7cccc5 70%);
  -webkit-box-shadow: -3px 13px 24px -1px rgba(0,0,0,0.3);
  box-shadow: -3px 13px 24px -1px rgba(0,0,0,0.3);
}

a.navbar-brand {
    color: #fff !important;
}

.navbar-nav li {
    float: left;
    font-size: 15px;
    text-transform: uppercase;
}
/* ... */

